--- a/doc/book/basics.tex
+++ b/doc/book/basics.tex
@@ -166,7 +166,7 @@ In VMime, error handling is exclusively based on exceptions, there is no error
 codes, or things like that.
 
 VMime code may throw exceptions in many different situations: an unexpected
-error occured, an operation is not supported, etc. You should catch them if
+error occurred, an operation is not supported, etc. You should catch them if
 you want to report failures to the user. This is also useful when debugging
 your program.
 
